@@ -1,6 +1,11 @@
 2015-02-15  H.J. Lu  <hongjiu.lu@intel.com>
 
 	Backport from mainline:
+	2014-01-17  Jeff Law  <law@redhat.com>
+
+	* ree.c (combine_set_extension): Temporarily disable test for
+	changing number of hard registers.
+
 	2014-01-15  Jeff Law  <law@redhat.com>
 
 	PR tree-optimization/59747
